# esp32-pico-wifi

./: .gitignore  Cargo.toml  README.md  openocd.gdb
.cargo/: config
src/: main.rs  secrets.rs
